@@ -7,9 +7,14 @@ xz-utils (4.999.9beta+20091126-1) unstable; urgency=low
   * debian/rules: Stop explicitly disabling assembler optimizations
     on the Hurd.  The configure script will check if a platform is
     supported now.
+
+  * debian/rules: Update clean target to handle comments and
+    wildcards in .gitignore.
+  * Build-Depends: perl.
+
   * Remove debian/dirs lists.
 
- -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 26 Nov 2009 02:41:08 -0600
+ -- Jonathan Nieder <jrnieder@gmail.com>  Mon, 18 Jan 2010 02:14:36 -0600
 
 xz-utils (4.999.9beta+20091116-1) unstable; urgency=low
 
